extendBackupCursor should reuse the WiredTiger session

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.7
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Storage NYC 2018-12-17
    • 50
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, extendBackupCursor creates a new WiredTigerSession for this operation. However, the correct way is to reuse the same WiredTigerSession which was used for opening back the backup cursor. Otherwise an assertion in WiredTiger will fail.

            Assignee:
            Xiangyu Yao (Inactive)
            Reporter:
            Xiangyu Yao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: