SERVER-38613 extendBackupCursor should reuse the WiredTiger session